Update Polybar module configurations

--- a/home/dot_config/polybar/bars/common-bottom.conf
+++ b/home/dot_config/polybar/bars/common-bottom.conf
@@ -89,7 +89,7 @@ radius = 0
 
 modules-left = workspaces-with-icons
 modules-center = playing
-modules-right = keyboard sep filesystem sep memory sep cpu sep temperature
+modules-right = keyboard dots filesystem sep memory sep cpu sep temperature
 
 override-redirect = false
 
