--- a/home/dot_config/polybar/bars/i3-top.conf
+++ b/home/dot_config/polybar/bars/i3-top.conf
@@ -89,7 +89,7 @@ radius = 4
 
 modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone dots pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup
-modules-right = night-mode sep feh-blur-toggle dots github dots tray
+modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
 wm-restack = i3
 override-redirect = true
