--- a/home/dot_config/polybar/modules/i3.conf
+++ b/home/dot_config/polybar/modules/i3.conf
@@ -5,7 +5,7 @@ index-sort = true
 wrapping-scroll = true
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+; pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = ${colors.foreground}
@@ -53,6 +53,16 @@ ws-icon-8 = 9;󰝦
 ws-icon-9 = 10;󰝦
 
 ; modified labels using icon
-label-focused = %index% 󰧞
-label-unfocused = %index% 󰝦
-label-visible = %index% 󰝦
+label-focused = 󰮯
+label-unfocused = 󰧞
+label-visible = 󰊠
+
+; Override foreground color to match the game
+label-focused-foreground = ${colors.orange}
+label-unfocused-foreground = ${colors.purple}
+label-visible-foreground = ${colors.blue}
+
+; Override the underline color to match the background
+label-focused-underline =
+label-unfocused-underline =
+label-visible-underline =
