--- a/home/dot_config/polybar/modules/workspaces.conf
+++ b/home/dot_config/polybar/modules/workspaces.conf
@@ -110,6 +110,16 @@ icon-8 = 9;󰝦
 icon-9 = 10;󰝦
 
 ; modified labels using icon
-label-active = %index% 󰧞
-label-empty = %index% 󰝦
-label-occupied = %index% 󰝦
+label-active = 󰮯
+label-empty = 󰧞
+label-occupied = 󰊠
+
+; Override foreground color to match the game
+label-active-foreground = ${colors.orange}
+label-empty-foreground = ${colors.purple}
+label-occupied-foreground = ${colors.blue}
+
+; Override the underline color to match the background
+label-active-underline =
+label-empty-underline =
+label-occupied-underline =
