--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -86,6 +86,6 @@ radius = 0
 
 modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup
-modules-right = night-mode sep feh-blur-toggle sep github sep tray
+modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
 override-redirect = false
