Update Polybar configuration and scripts

--- a/home/dot_config/polybar/master.conf
+++ b/home/dot_config/polybar/master.conf
@@ -28,6 +28,7 @@ moderate = ${xrdb:color11}
 urgent = ${xrdb:color9}
 trim = #8fa1b3
 blue = #8fa1b3
+green = #a3be8c
 pink = #bf616a
 orange = #ebcb8b
 purple = #b48ead
