Update polybar configuration files and executable player script

--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -86,7 +86,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 0
 
-modules-left = i3-with-icons
+modules-left =
 modules-center = playing
 modules-right = keyboard dots filesystem sep memory sep cpu sep temperature
 
