Update labels in polybar modules and scripts

--- a/home/dot_config/polybar/modules/i3.conf
+++ b/home/dot_config/polybar/modules/i3.conf
@@ -53,9 +53,9 @@ ws-icon-8 = 9;󰝦
 ws-icon-9 = 10;󰝦
 
 ; modified labels using icon
-label-focused = 󰮯
-label-unfocused = 󰧞
-label-visible = 󰊠
+label-focused = %{T2}󰮯%{T-}
+label-unfocused = %{T3}󰧞%{T-}
+label-visible = %{T2}󰊠%{T-}
 
 ; Override foreground color to match the game
 label-focused-foreground = ${colors.orange}
