--- a/home/dot_config/polybar/modules/workspaces.conf
+++ b/home/dot_config/polybar/modules/workspaces.conf
@@ -110,9 +110,9 @@ icon-8 = 9;󰝦
 icon-9 = 10;󰝦
 
 ; modified labels using icon
-label-active = 󰮯
-label-empty = 󰧞
-label-occupied = 󰊠
+label-active = %{T2}󰮯%{T-}
+label-empty = %{T3}󰧞%{T-}
+label-occupied = %{T2}󰊠%{T-}
 
 ; Override foreground color to match the game
 label-active-foreground = ${colors.orange}
