--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -61,7 +61,7 @@ module-margin-right = 0
 ; See the Fonts wiki page for more details
 font-0 = "monospace:size=10;2"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;3"
-font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=15;3"
+font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
 font-3 = "Hack Nerd Font Mono:pixelsize=15;3"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
@@ -85,7 +85,7 @@ foreground-alt = ${colors.foreground-alt}
 radius = 0
 
 modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
-modules-center = date-popup
+modules-center = workspaces-with-icons
 modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
 override-redirect = false
