Update Polybar configuration files and weather script

--- a/home/dot_config/polybar/bars/i3-top.conf
+++ b/home/dot_config/polybar/bars/i3-top.conf
@@ -88,7 +88,7 @@ foreground-alt = ${colors.foreground-alt}
 radius = 4
 
 modules-left = jgmenu dots apps sep window_switch dots pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
-modules-center = i3-with-icons
+modules-center = date-popup weather
 modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
 wm-restack = i3
