Update datetime format and prefix color

--- a/home/dot_config/polybar/modules/datetime.conf
+++ b/home/dot_config/polybar/modules/datetime.conf
@@ -8,8 +8,8 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground}
+format-prefix = 
+format-prefix-foreground = ${colors.green}
 format-underline =
 format-foreground = ${colors.foreground}
 
@@ -23,7 +23,7 @@ click-left = dots popup-calendar --popup
 
 label = %output:0%
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground}
+format-prefix = 
+format-prefix-foreground = ${colors.green}
 format-underline =
 format-foreground = ${colors.foreground}
