Update Polybar configuration files

--- a/home/dot_config/polybar/modules/datetime.conf
+++ b/home/dot_config/polybar/modules/datetime.conf
@@ -8,8 +8,9 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
-format-prefix-foreground = ${colors.green}
+format-prefix = 
+format-font = 5
+format-prefix-foreground = ${xrdb:color7}
 format-underline =
 format-foreground = ${colors.foreground}
 
@@ -23,7 +24,8 @@ click-left = dots popup-calendar --popup
 
 label = %output:0%
 
-format-prefix = 
-format-prefix-foreground = ${colors.green}
+format-prefix = 󰧒
+format-font = 4
+format-prefix-foreground = ${xrdb:color7}
 format-underline =
 format-foreground = ${colors.foreground}
