--- a/home/dot_config/polybar/modules/jgmenu.conf
+++ b/home/dot_config/polybar/modules/jgmenu.conf
@@ -1,6 +1,7 @@
 [module/jgmenu]
 type = custom/text
-label = 
+label = 
 label-font = 5
+label-foreground = ${xrdb:color7}
 click-left = "dots jgmenu > /dev/null 2>&1 &"
 click-right = exo-open ~/.config/jgmenu/jgmenurc
