--- a/home/dot_config/polybar/modules/keyboard.conf
+++ b/home/dot_config/polybar/modules/keyboard.conf
@@ -1,15 +1,23 @@
 [module/keyboard]
 type           = internal/xkeyboard
-blacklist-0    = scroll lock
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
 format         = <label-layout> <label-indicator>
 format-spacing = 0
+
+format-prefix = "%{T5}󰌌%{T-} "
+format-prefix-foreground = ${xrdb:color7}
+format-prefix-underline = ${colors.background}
 
 ; Available tokens:
 ;   %layout%
 ;   %name%
 ;   %number%
 ; Default: %layout%
-label-layout   = %{A1:xfce4-keyboard-settings & disown:}%{A3:xfce4-keyboard-settings & disown:}  %layout%%{A}%{A}
+label-layout = %{A3:xfce4-keyboard-settings & disown:} %name%%{A}
 
 ; Available tokens:
 ;   %name%
@@ -19,14 +27,20 @@ label-indicator-background = ${colors.background}
 
 [module/xkeyboard]
 type = internal/xkeyboard
+
+; List of indicators to ignore
 blacklist-0 = num lock
+blacklist-1 = scroll lock
 
-format-prefix = " 󰌌 "
-format-prefix-foreground = ${colors.foreground}
-format-prefix-underline = ${colors.foreground-alt}
+format         = <label-layout> <label-indicator>
+format-spacing = 0
 
-label-layout = %layout%
-label-layout-underline = ${colors.foreground-alt}
+format-prefix = "%{T5}󰌌%{T-} "
+format-prefix-foreground = ${xrdb:color7}
+format-prefix-underline = ${colors.background}
+
+label-layout = %name%
+label-layout-underline = ${colors.background}
 
 label-indicator-background = ${colors.background}
-label-indicator-underline = ${colors.foreground-alt}
+label-indicator-underline = ${colors.background}
