--- a/home/dot_config/polybar/modules/light.conf
+++ b/home/dot_config/polybar/modules/light.conf
@@ -2,20 +2,20 @@
 type = internal/xbacklight
 
 format = <label> <bar>
-label =  %percentage%%
+label = %{T5}%{T-} %percentage%%
 label-foreground = ${colors.foreground}
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
 card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 
-bar-width = 7
+bar-width = 5
 bar-indicator = |
 bar-indicator-foreground = ${colors.foreground}
-bar-indicator-font =
+bar-indicator-font = 3
 bar-fill = ─
 bar-fill-font = 4
-bar-fill-foreground = #9f78e1
+bar-fill-foreground = ${xrdb:color10}
 bar-empty = ─
 bar-empty-font = 4
 bar-empty-foreground = ${colors.foreground-alt}
@@ -39,6 +39,8 @@ card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 format = <label>
 
 [module/night-mode]
-type = custom/script
-exec = echo "󰖔"
+type = custom/text
+label = 󰖔
+label-font = 4
+label-foreground = ${xrdb:color7}
 click-left = dots night-mode auto
