--- a/home/dot_config/polybar/modules/music.conf
+++ b/home/dot_config/polybar/modules/music.conf
@@ -8,7 +8,8 @@ format-foreground = ${colors.foreground}
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix = " 󰓇 "
+format-prefix = " "
+format-prefix-foreground = ${colors.green}
 format = <label>
 exec = ~/.config/polybar/scripts/spotify
 format-underline =
