--- a/home/dot_config/polybar/modules/window.conf
+++ b/home/dot_config/polybar/modules/window.conf
@@ -4,11 +4,11 @@ interval = 5
 label = %output%
 click-left = skippy-xd
 click-right = skippy-xd
-exec = echo "󰀻"
+exec = echo "%{T4}%{T-}"
 format = <label>
 
 [module/xwindow]
 type = internal/xwindow
 format-foreground = ${colors.foreground}
-label = %title%
-label-maxlen = 80
+label = %{T4}%{T-} %title%
+label-maxlen = 82
