--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -62,7 +62,7 @@ module-margin-right = 0
 font-0 = "monospace:size=10;2"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;3"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
-font-3 = "Hack Nerd Font Mono:pixelsize=15;3"
+font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
 
