--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -44,7 +44,7 @@ border-left-size = 0
 ; the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2
+padding = 1
 
 ; Margin (number of spaces, pixels, or points) to add before/after each module
 ; Individual side values can be defined using:
@@ -59,10 +59,10 @@ module-margin-right = 0
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
-font-0 = "monospace:size=10;0"
+font-0 = "monospace:size=10;1"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;3"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
-font-3 = "Hack Nerd Font Mono:pixelsize=15;3"
+font-3 = "Hack Nerd Font Mono:pixelsize=17;3"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
 
@@ -88,7 +88,7 @@ radius = 0
 
 modules-left = i3-with-icons
 modules-center = playing
-modules-right = keyboard dots filesystem sep memory sep cpu sep temperature
+modules-right = xkeyboard dots filesystem sep memory sep cpu sep temperature
 
 wm-restack = i3
 override-redirect = true
