--- a/home/dot_config/polybar/bars/i3-top.conf
+++ b/home/dot_config/polybar/bars/i3-top.conf
@@ -44,7 +44,7 @@ border-left-size = 8
 ; the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2
+padding = 1
 
 ; Margin (number of spaces, pixels, or points) to add before/after each module
 ; Individual side values can be defined using:
@@ -62,7 +62,7 @@ module-margin-right = 0
 font-0 = "monospace:size=10;2"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;3"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
-font-3 = "Hack Nerd Font Mono:pixelsize=15;3"
+font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
 
@@ -87,7 +87,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 4
 
-modules-left = jgmenu dots apps sep window_switch dots pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
+modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup weather
 modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
