--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -6,18 +6,16 @@ click-left = dots microphone --toggle &
 
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
-format-volume =  <label-volume> <bar-volume>
-bar-volume-width = 7
+format-volume = %{T4}%{T-} <label-volume> <bar-volume>
+bar-volume-width = 5
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
 bar-volume-foreground-2 = #55aa55
 bar-volume-foreground-3 = #55aa55
 bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #B2535B
 bar-volume-gradient = true
 bar-volume-indicator = |
-bar-volume-indicator-font = 4
+bar-volume-indicator-font = 3
 bar-volume-fill = ─
 bar-volume-fill-font = 4
 bar-volume-empty = ─
@@ -28,7 +26,7 @@ type = internal/pulseaudio
 
 click-right = pavucontrol
 
-format-volume =  <label-volume>
+format-volume = %{T4}%{T-} <label-volume>
 format-volume-foreground = ${colors.foreground}
 label-volume = %percentage%%
 label-volume-foreground = ${colors.foreground}
@@ -40,21 +38,19 @@ label-muted-foreground = ${colors.foreground-alt}
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = 
+label-volume = %{T4}%{T-}
 label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = 
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
-bar-volume-width = 7
+bar-volume-width = 5
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
 bar-volume-foreground-2 = #55aa55
 bar-volume-foreground-3 = #55aa55
 bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
