--- a/home/dot_config/polybar/modules/fs.conf
+++ b/home/dot_config/polybar/modules/fs.conf
@@ -4,7 +4,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted =  %mountpoint% %percentage_used%% of %total%
-label-mounted-foreground = ${colors.foreground}
+label-mounted = %{T5}󰗮%{T-} %mountpoint% %percentage_used%% of %total%
+label-mounted-foreground = ${xrdb:color7}
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground}
