--- a/home/dot_config/polybar/modules/resources.conf
+++ b/home/dot_config/polybar/modules/resources.conf
@@ -1,20 +1,22 @@
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  "
-format-prefix-foreground = ${colors.foreground}
+format-prefix = 
+format-prefix-font = 5
+format-prefix-foreground = ${xrdb:color13}
 format-underline =
-label = %percentage:2%%
-label-foreground = ${colors.foreground}
+label = " %percentage:2%%"
+label-foreground = ${xrdb:color7}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " 󰍛 "
-format-prefix-foreground = ${colors.foreground}
+format-prefix = 
+format-prefix-font = 5
+format-prefix-foreground = ${xrdb:color14}
 format-underline =
-label = %percentage_used%%
-label-foreground = ${colors.foreground}
+label = " %percentage_used%%"
+label-foreground = ${xrdb:color7}
 
 [module/battery]
 type = internal/battery
@@ -63,12 +65,12 @@ format-underline =
 format-warn = <ramp> <label-warn>
 format-warn-underline =
 
-label = 󰏈 %temperature-c%
+label = %temperature-c%
 label-warn = 󱗗 %temperature-c%
 label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.foreground}
 
-ramp-0 = 
+ramp-0 = 
 ramp-1 =
 ramp-2 = 󰈸
-ramp-foreground = ${colors.foreground}
+ramp-foreground = ${colors.foreground-alt}
