Update Polybar configuration and music module

--- a/home/dot_config/polybar/bars/common-bottom.conf
+++ b/home/dot_config/polybar/bars/common-bottom.conf
@@ -86,8 +86,8 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 0
 
-modules-left =
-modules-center = playing
+modules-left = workspaces-with-icons
+modules-center = player sep playing
 modules-right = keyboard dots filesystem sep memory sep cpu sep temperature
 
 override-redirect = false
