--- a/home/dot_config/polybar/bars/i3-bottom.conf
+++ b/home/dot_config/polybar/bars/i3-bottom.conf
@@ -87,7 +87,7 @@ foreground-alt = ${colors.foreground-alt}
 radius = 0
 
 modules-left = i3-with-icons
-modules-center = playing
+modules-center = player sep playing
 modules-right = xkeyboard dots filesystem sep memory sep cpu sep temperature
 
 wm-restack = i3
