--- a/home/dot_config/polybar/modules/music.conf
+++ b/home/dot_config/polybar/modules/music.conf
@@ -1,9 +1,12 @@
 [module/playing]
 type = custom/script
 interval = 1
+exec = ~/.config/polybar/scripts/player --title
+
+[module/player]
+type = custom/script
+interval = 1
 exec = ~/.config/polybar/scripts/player
-format-underline =
-format-foreground = ${colors.foreground}
 
 [module/spotify]
 type = custom/script
