--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -85,7 +85,7 @@ foreground-alt = ${colors.foreground-alt}
 radius = 0
 
 modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
-modules-center = workspaces-with-icons
+modules-center = date-popup weather
 modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
 override-redirect = false
