Update font configurations in polybar and menu modules

--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -59,7 +59,7 @@ module-margin-right = 0
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
-font-0 = "monospace:size=10;2"
+font-0 = "Hack Nerd Font Mono:style=Regular:size=10;2"
 font-1 = "Hack Nerd Font Mono:style=Solid:pixelsize=15;3"
 font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
 font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
