--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -2,6 +2,7 @@
 type = custom/script
 exec = dots microphone
 tail = true
+label-font = 2
 click-left = dots microphone --toggle &
 
 [module/pulseaudio-bar]
