--- a/home/dot_config/polybar/modules/background.conf
+++ b/home/dot_config/polybar/modules/background.conf
@@ -1,4 +1,5 @@
 [module/feh-blur-toggle]
 type = custom/script
 exec = [ "$(pgrep -fcl "dots-feh-blur")" -gt 1 ] && echo "󰂷" || echo "󰂵"
+label-font = 4
 click-left = dots feh-blur --blur 32 --darken 12 -c --no-animate --toggle
