--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -1,13 +1,17 @@
 [module/apps]
 type = custom/menu
 
+label-open-font = 2
 label-open = " 󰘖"
+label-open-foreground = ${xrdb:color9}
 label-close = " 󰘕 "
-label-close-foreground = ${colors.urgent}
+label-close-font = 2
+label-close-foreground = ${xrdb:color7}
 label-separator = " | "
 # Top level
 menu-0-0 = "  "
 menu-0-0-exec = #apps.open.1
+menu-0-0-font = 2
 menu-0-1 = "  "
 menu-0-1-exec = #apps.open.2
 menu-0-2 = "   |"
@@ -15,6 +19,7 @@ menu-0-2-exec = #apps.open.3
 # 1
 menu-1-0 = " 󰘕 "
 menu-1-0-exec = #apps.open.0
+menu-1-0-font = 2
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
 menu-1-1-exec = exo-open --launch WebBrowser
@@ -25,6 +30,7 @@ menu-1-3-exec = exo-open --launch FileManager
 # 2
 menu-2-0 = " 󰘕 "
 menu-2-0-exec = #apps.open.0
+menu-2-0-font = 2
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots rofi-randr &
@@ -35,6 +41,7 @@ menu-2-3-exec = pavucontrol &
 # 3
 menu-3-0 = " 󰘕 "
 menu-3-0-exec = #apps.open.0
+menu-3-0-font = 2
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
 menu-3-1-exec = betterlockscreen --lock &
