--- a/home/dot_config/i3/config.d/autostart.conf
+++ b/home/dot_config/i3/config.d/autostart.conf
@@ -7,6 +7,9 @@ exec --no-startup-id xdg-autostart &
 # Launch polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
 
+# Fix wm gaps
+exec --no-startup-id ~/.config/i3/setup-gaps.sh
+
 # Run i3-layouts
 exec i3-layouts
 
