--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -14,8 +14,10 @@ menu-0-0-exec = #apps.open.1
 menu-0-0-font = 2
 menu-0-1 = "  "
 menu-0-1-exec = #apps.open.2
+menu-0-1-font = 2
 menu-0-2 = "   |"
 menu-0-2-exec = #apps.open.3
+menu-0-2-font = 2
 # 1
 menu-1-0 = " 󰘕 "
 menu-1-0-exec = #apps.open.0
@@ -23,10 +25,12 @@ menu-1-0-font = 2
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
 menu-1-1-exec = exo-open --launch WebBrowser
+menu-1-2-font = 2
 menu-1-2 = "  "
 menu-1-2-exec = exo-open --launch TerminalEmulator
 menu-1-3 = "   |"
 menu-1-3-exec = exo-open --launch FileManager
+menu-1-3-font = 2
 # 2
 menu-2-0 = " 󰘕 "
 menu-2-0-exec = #apps.open.0
@@ -34,10 +38,13 @@ menu-2-0-font = 2
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots rofi-randr &
+menu-2-1-font = 2
 menu-2-2 = "  "
 menu-2-2-exec = dots i3-resurrect-rofi &
+menu-2-2-font = 2
 menu-2-3 = "   |"
 menu-2-3-exec = pavucontrol &
+menu-2-3-font = 2
 # 3
 menu-3-0 = " 󰘕 "
 menu-3-0-exec = #apps.open.0
@@ -45,7 +52,10 @@ menu-3-0-font = 2
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
 menu-3-1-exec = betterlockscreen --lock &
+menu-3-1-font = 2
 menu-3-2 = "  "
 menu-3-2-exec = systemctl -i reboot
+menu-3-2-font = 2
 menu-3-3 = "   |"
 menu-3-3-exec = systemctl -i poweroff
+menu-3-3-font = 2
