Add i3-top-multipart.conf to polybar config

--- a/home/dot_config/polybar/config.ini
+++ b/home/dot_config/polybar/config.ini
@@ -4,4 +4,5 @@ include-file = ~/.config/polybar/master.conf
 include-file = ~/.config/polybar/bars/common-top.conf
 include-file = ~/.config/polybar/bars/common-bottom.conf
 include-file = ~/.config/polybar/bars/i3-top.conf
+include-file = ~/.config/polybar/bars/i3-top-multipart.conf
 include-file = ~/.config/polybar/bars/i3-bottom.conf
