--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -273,7 +273,7 @@ bindsym $Mod+Shift+b border toggle
 
 # changing border style
 bindsym $Mod+n border normal
-bindsym $Mod+y border 2pixel
+bindsym $Mod+y border pixel
 bindsym $Mod+u border none
 
 # Press $mod+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
