Fix wm gaps by updating startup command in autostart.conf

--- a/home/dot_config/i3/config.d/autostart.conf
+++ b/home/dot_config/i3/config.d/autostart.conf
@@ -8,7 +8,7 @@ exec --no-startup-id xdg-autostart &
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
 
 # Fix wm gaps
-exec --no-startup-id ~/.config/i3/setup-gaps.sh
+exec ~/.config/i3/setup-gaps.sh
 
 # Run i3-layouts
 exec i3-layouts
