Update polybar configuration for i3 window manager

--- a/home/dot_config/polybar/bars/common-top.conf
+++ b/home/dot_config/polybar/bars/common-top.conf
@@ -84,7 +84,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 0
 
-modules-left = jgmenu dots apps sep window_switch sep pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
+modules-left = jgmenu dots apps sep window_switch sep rices dots pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
 modules-center = date-popup weather
 modules-right = night-mode sep feh-blur-toggle sep github dots tray
 
