--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -19,6 +19,7 @@ include-file = ~/.config/polybar/modules/music.conf
 include-file = ~/.config/polybar/modules/net.conf
 include-file = ~/.config/polybar/modules/pkg.conf
 include-file = ~/.config/polybar/modules/resources.conf
+include-file = ~/.config/polybar/modules/rices.conf
 include-file = ~/.config/polybar/modules/tray.conf
 include-file = ~/.config/polybar/modules/weather.conf
 include-file = ~/.config/polybar/modules/window.conf
