--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ permissions:
   contents: read
 
 jobs:
-  lint:
+  super-linter:
     name: Lint Code Base
     runs-on: ubuntu-latest
     permissions:
