--- a/home/dot_config/polybar/bars/i3-top.conf
+++ b/home/dot_config/polybar/bars/i3-top.conf
@@ -74,11 +74,11 @@ font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-width = 98%
+width = 99.15%
 height = 27
 
-offset-x = 1%
-offset-y = 10
+offset-x = 0.5%
+offset-y = 0.7%
 
 background = ${colors.background}
 background-alt = ${colors.background-alt}
