--- a/home/dot_config/picom/picom.conf
+++ b/home/dot_config/picom/picom.conf
@@ -3,71 +3,6 @@
 wm-support = "none";
 
 #################################
-#           Animations         #
-
-# !These animations WILL NOT work correctly for any other wm other than phyOS-dwm fork!
-
-# fly-in: Windows fly in from random directions to the screen
-# maximize: Windows pop from center of the screen to their respective positions
-# minimize: Windows minimize from their position to the center of the screen
-# slide-in-center: Windows move from upper-center of the screen to their respective positions
-# slide-out-center: Windows move to the upper-center of the screen
-# slide-left: Windows are created from the right-most window position and slide leftwards
-# slide right: Windows are created from the left-most window position and slide rightwards
-# slide-down: Windows are moved from the top of the screen and slide downward
-# slide-up: Windows are moved from their position to top of the screen
-# squeeze: Windows are either closed or created to/from their center y-position (the animation is similar to a blinking eye)
-# squeeze-bottom: Similar to squeeze, but the animation starts from bottom-most y-position
-# zoom: Windows are either created or destroyed from/to their center (not the screen center)
-
-#################################
-
-# enable or disable animations
-animations = true;
-
-# change animation speed of windows in current tag e.g open window in current tag
-animation-stiffness-in-tag = 125;
-
-# change animation speed of windows when tag changes
-animation-stiffness-tag-change = 90.0;
-
-# change the mass of windows
-# modifying the mass of windows makes them virtually heavier and therefore slower to animate.
-animation-window-mass = 0.4;
-
-# change dampening applied during the animation
-# this setting basically does what it says. It dampens the animation of windows.
-animation-dampening = 12;
-
-# toggles clamping
-# if you are using a animation setting that would make the window extend larger than it would be after,
-# the animation has played then it will cut the animation off once the window reaches its physical geometry.
-animation-clamping = true;
-
-# open windows
-# available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
-animation-for-open-window = "zoom";
-
-# minimize or close windows
-# available options: slide-up, slide-down, slide-left, slide-right, squeeze, squeeze-bottom, zoom
-animation-for-unmap-window = "none";
-
-# popup windows
-animation-for-transient-window = "zoom";
-
-# set animation for windows being transitioned out while changings tags
-animation-for-prev-tag = "minimize";
-
-# enables fading for windows being transitioned out while changings tags
-enable-fading-prev-tag = true;
-
-# set animation for windows being transitioned in while changings tags
-animation-for-next-tag = "slide-in-center";
-
-# enables fading for windows being transitioned in while changings tags
-enable-fading-next-tag = true;
-
-#################################
 #           Corners             #
 #################################
 
@@ -93,44 +28,7 @@ rounded-corners-exclude = [
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "glx";
-
-#################################
-#
-# GLX backend
-#
-#################################
-
-glx-no-stencil = true;
-
-# GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
-# My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
-# but a 20% increase when only 1/4 is.
-# My tests on nouveau show terrible slowdown.
-glx-copy-from-front = true;
-
-# GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
-# My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
-# May break VSync and is not available on some drivers.
-# Overrides --glx-copy-from-front.
-glx-use-copysubbuffermesa = false;
-
-# GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
-# Recommended if it works.
-# glx-no-rebind-pixmap = true;
-
-# GLX backend: GLX buffer swap method we assume.
-# Could be undefined (0), copy (1), exchange (2), 3-6, or buffer-age (-1).
-# undefined is the slowest and the safest, and the default value.
-# copy is fastest, but may fail on some drivers,
-# 2-6 are gradually slower but safer (6 is still faster than 0).
-# Usually, double buffer means 2, triple buffer means 3.
-# buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
-# Useless with --glx-use-copysubbuffermesa.
-# Partially breaks --resize-damage.
-# Defaults to undefined.
-#glx-swap-method = "undefined";
+backend = "xrender";
 
 #################################
 #
@@ -365,3 +263,9 @@ wintypes:
 
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = false;
+
+
+######################
+# Picom Rules
+######################
+@include "picom-rules.conf"
