feat: Enhance picom rules with additional animations for normal windows and geometry triggers

--- a/home/dot_config/picom/picom-rules.conf
+++ b/home/dot_config/picom/picom-rules.conf
@@ -105,7 +105,8 @@ rules: (
                 "class_g = 'retroarch'";
         corner-radius = 0;
     },
-    # Animations for normal windows
+
+    # Animation for normal windows (includes move animations)
     {
         match = "window_type = 'normal'";
         animations = (
@@ -118,7 +119,7 @@ rules: (
                     end = "window-raw-opacity";
                 };
                 scale-x = {
-                    curve = "cubic-bezier(0,1.3,1,1)";
+                    curve = "cubic-bezier(0.8,0,0.2,1)";
                     duration = 0.4;
                     start = 0.8;
                     end = 1;
@@ -140,11 +141,38 @@ rules: (
                     end = 0.8;
                 };
                 scale-y = "scale-x";
+            },
+            {
+                triggers = ["geometry"];  # This trigger is activated during window movement or resizing
+                offset-x = {
+                    curve = "cubic-bezier(0.3,0,0.7,1)";
+                    duration = 0.3;
+                    start = "window-x-before - window-x";
+                    end = 0;
+                };
+                offset-y = {
+                    curve = "cubic-bezier(0.3,0,0.7,1)";
+                    duration = 0.3;
+                    start = "window-y-before - window-y";
+                    end = 0;
+                };
+                scale-x = {
+                    curve = "linear";
+                    duration = 0.3;
+                    start = "window-width-before / window-width";
+                    end = 1;
+                };
+                scale-y = {
+                    curve = "linear";
+                    duration = 0.3;
+                    start = "window-height-before / window-height";
+                    end = 1;
+                };
             }
         )
     },
 
-    # Animations for Rofi
+    # Animations for Rofi launcher
     {
         match = "class_g = 'Rofi'";
         animations = (
@@ -163,7 +191,7 @@ rules: (
         )
     },
 
-    # Animations for Dunst
+    # Animations for Dunst notifications
     {
         match = "class_g = 'Dunst'";
         animations = (
