--- a/home/dot_config/picom/picom-rules.conf
+++ b/home/dot_config/picom/picom-rules.conf
@@ -106,7 +106,7 @@ rules: (
         corner-radius = 0;
     },
 
-    # Animation for normal windows (includes move animations)
+    # Animations for NORMAL windows (general usage, including move and resize)
     {
         match = "window_type = 'normal'";
         animations = (
@@ -114,60 +114,67 @@ rules: (
                 triggers = ["open", "show"];
                 opacity = {
                     curve = "cubic-bezier(0,1,1,1)";
-                    duration = 0.4;
+                    duration = 0.5;
                     start = 0;
                     end = "window-raw-opacity";
                 };
+                blur-opacity = "opacity";
+                shadow-opacity = "opacity";
+                offset-x = "(1 - scale-x) / 2 * window-width";
+                offset-y = "(1 - scale-y) / 2 * window-height";
                 scale-x = {
-                    curve = "cubic-bezier(0.8,0,0.2,1)";
-                    duration = 0.4;
-                    start = 0.8;
+                    curve = "cubic-bezier(0,1.3,1,1)";
+                    duration = 0.5;
+                    start = 0.6;
                     end = 1;
                 };
                 scale-y = "scale-x";
+                shadow-scale-x = "scale-x";
+                shadow-scale-y = "scale-y";
+                shadow-offset-x = "offset-x";
+                shadow-offset-y = "offset-y";
             },
             {
                 triggers = ["close", "hide"];
                 opacity = {
                     curve = "linear";
-                    duration = 0.3;
+                    duration = 0.2;
                     start = "window-raw-opacity-before";
                     end = 0;
                 };
-                scale-x = {
-                    curve = "cubic-bezier(0.3,0,0.7,1)";
-                    duration = 0.3;
-                    start = 1;
-                    end = 0.8;
-                };
-                scale-y = "scale-x";
+                blur-opacity = "opacity";
+                shadow-opacity = "opacity";
             },
             {
-                triggers = ["geometry"];  # This trigger is activated during window movement or resizing
-                offset-x = {
-                    curve = "cubic-bezier(0.3,0,0.7,1)";
-                    duration = 0.3;
-                    start = "window-x-before - window-x";
-                    end = 0;
-                };
-                offset-y = {
-                    curve = "cubic-bezier(0.3,0,0.7,1)";
-                    duration = 0.3;
-                    start = "window-y-before - window-y";
-                    end = 0;
-                };
+                triggers = ["geometry"];  # Trigger for window movement and resizing
                 scale-x = {
-                    curve = "linear";
-                    duration = 0.3;
+                    curve = "cubic-bezier(0,0,0,1.28)";
+                    duration = 0.4;
                     start = "window-width-before / window-width";
                     end = 1;
                 };
                 scale-y = {
-                    curve = "linear";
-                    duration = 0.3;
+                    curve = "cubic-bezier(0,0,0,1.28)";
+                    duration = 0.4;
                     start = "window-height-before / window-height";
                     end = 1;
                 };
+                offset-x = {
+                    curve = "cubic-bezier(0,0,0,1.28)";
+                    duration = 0.4;
+                    start = "window-x-before - window-x";
+                    end = 0;
+                };
+                offset-y = {
+                    curve = "cubic-bezier(0,0,0,1.28)";
+                    duration = 0.4;
+                    start = "window-y-before - window-y";
+                    end = 0;
+                };
+                shadow-scale-x = "scale-x";
+                shadow-scale-y = "scale-y";
+                shadow-offset-x = "offset-x";
+                shadow-offset-y = "offset-y";
             }
         )
     },
@@ -178,15 +185,15 @@ rules: (
         animations = (
             {
                 triggers = ["open", "show"];
-                preset = "slide-in";
-                direction = "up";
-                duration = 0.3;
+                preset = "appear";
+                duration = 0.2;
+                scale = 0.5;
             },
             {
                 triggers = ["close", "hide"];
-                preset = "slide-out";
-                direction = "down";
-                duration = 0.2;
+                preset = "disappear";
+                duration = 0.05;
+                scale = 1;
             }
         )
     },
@@ -197,15 +204,34 @@ rules: (
         animations = (
             {
                 triggers = ["open", "show"];
-                preset = "fly-in";
+                preset = "slide-in";
                 direction = "right";
                 duration = 0.2;
             },
             {
                 triggers = ["close", "hide"];
                 preset = "fly-out";
-                direction = "left";
+                direction = "up";
                 duration = 0.2;
+            }
+        )
+    },
+
+    # Animations for Jgmenu
+    {
+        match = "class_g = 'jgmenu'";
+        animations = (
+            {
+                triggers = ["open", "show"];
+                preset = "appear";
+                duration = 0.15;
+                scale = 1;
+            },
+            {
+                triggers = ["close", "hide"];
+                preset = "disappear";
+                duration = 0.08;
+                scale = 1;
             }
         )
     },
@@ -216,15 +242,68 @@ rules: (
         animations = (
             {
                 triggers = ["open", "show"];
-                preset = "slide-in";
+                preset = "fly-in";
                 direction = "up";
-                duration = 0.3;
+                duration = 0.2;
+            },
+            {
+                triggers = ["close", "hide"];
+                preset = "fly-out";
+                direction = "up";
+                duration = 0.2;
+            }
+        )
+    },
+
+    # Animations for Eww widgets
+    {
+        match = "name = 'Eww - launchermenu'";
+        animations = (
+            {
+                triggers = ["open", "show"];
+                preset = "slide-in";
+                direction = "right";
+                duration = 0.2;
             },
             {
                 triggers = ["close", "hide"];
                 preset = "slide-out";
-                direction = "down";
-                duration = 0.3;
+                direction = "right";
+                duration = 0.2;
+            }
+        )
+    },
+    {
+        match = "name = 'Eww - music'";
+        animations = (
+            {
+                triggers = ["open", "show"];
+                preset = "slide-in";
+                direction = "up";
+                duration = 0.2;
+            },
+            {
+                triggers = ["close", "hide"];
+                preset = "slide-out";
+                direction = "up";
+                duration = 0.2;
+            }
+        )
+    },
+    {
+        match = "name = 'Eww - date'";
+        animations = (
+            {
+                triggers = ["open", "show"];
+                preset = "fly-in";
+                direction = "up";
+                duration = 0.2;
+            },
+            {
+                triggers = ["close", "hide"];
+                preset = "fly-out";
+                direction = "up";
+                duration = 0.2;
             }
         )
     }
