feat: Simplify Eww widget animations matching with regex pattern

--- a/home/dot_config/picom/picom-rules.conf
+++ b/home/dot_config/picom/picom-rules.conf
@@ -257,41 +257,7 @@ rules: (
 
     # Animations for Eww widgets
     {
-        match = "name = 'Eww - launchermenu'";
-        animations = (
-            {
-                triggers = ["open", "show"];
-                preset = "slide-in";
-                direction = "right";
-                duration = 0.2;
-            },
-            {
-                triggers = ["close", "hide"];
-                preset = "slide-out";
-                direction = "right";
-                duration = 0.2;
-            }
-        )
-    },
-    {
-        match = "name = 'Eww - music'";
-        animations = (
-            {
-                triggers = ["open", "show"];
-                preset = "slide-in";
-                direction = "up";
-                duration = 0.2;
-            },
-            {
-                triggers = ["close", "hide"];
-                preset = "slide-out";
-                direction = "up";
-                duration = 0.2;
-            }
-        )
-    },
-    {
-        match = "name = 'Eww - date'";
+        match = "name ?= '^Eww - '";
         animations = (
             {
                 triggers = ["open", "show"];
