feat(kitty): add installation script and configuration documentation

--- a/home/dot_config/networkmanager-dmenu/config.ini
+++ b/home/dot_config/networkmanager-dmenu/config.ini
@@ -2,5 +2,5 @@
 dmenu_command = rofi -password -theme ~/.config/rofi/networks.rasi
 
 [editor]
-terminal = alacritty
+terminal = kitty
 gui_if_available = true
