--- a/home/dot_config/polybar/modules/pkg.conf
+++ b/home/dot_config/polybar/modules/pkg.conf
@@ -1,5 +1,5 @@
 [module/pkg]
 type = custom/script
 exec = dots updates
-label = %{A1:alacritty -e=dots-sysupdate & disown:} %output% %{A}
+label = %{A1:kitty -e=dots-sysupdate & disown:} %output% %{A}
 tail = true
