feat(xfce): add configuration files for xfce4-session, thunar-volman, xfce4-screensaver, and xfce4-mime-settings feat(docs): add PipeWire volume module documentation and images

--- a/home/dot_config/cava/config
+++ b/home/dot_config/cava/config
@@ -76,11 +76,11 @@
 # For oss 'source' will be the path to a audio device, e.g. '/dev/dsp2'. Default: '/dev/dsp', i.e. the default audio device.
 # README.md contains further information on how to setup CAVA for OSS on FreeBSD.
 #
-method = pulse
-source = auto
-
-; method = pipewire
+; method = pulse
 ; source = auto
+
+method = pipewire
+source = auto
 
 ; method = alsa
 ; source = hw:Loopback,1
