--- a/home/dot_config/i3/config.d/windows-control.conf
+++ b/home/dot_config/i3/config.d/windows-control.conf
@@ -25,6 +25,7 @@ for_window [class="Oblogout"] fullscreen enable
 for_window [class="octopi"] floating enable
 for_window [class="Pamac-manager"] floating enable
 for_window [class="Pavucontrol"] floating enable
+for_window [class="Pwvucontrol"] floating enable
 for_window [class="Qtconfig-qt4"] floating enable sticky enable
 for_window [class="Simple-scan"] floating enable
 for_window [class="(?i)System-config-printer.py"] floating enable
