--- a/home/dot_config/polybar/bars/i3-top-multipart.conf
+++ b/home/dot_config/polybar/bars/i3-top-multipart.conf
@@ -88,7 +88,7 @@ foreground-alt = ${colors.foreground-alt}
 radius = 4
 
 modules-left =
-modules-center = jgmenu dots apps sep window_switch sep rices dots pulseaudio-microphone sep pulseaudio-bar sep backlight-acpi-bar
+modules-center = jgmenu dots apps sep window_switch sep rices dots pipewire-microphone sep pipewire-bar sep backlight-acpi-bar
 modules-right =
 
 wm-restack = i3
