--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -1,12 +1,12 @@
-[module/pulseaudio-microphone]
+[module/pipewire-microphone]
 type = custom/script
 exec = dots microphone
 tail = true
 label-font = 4
 click-left = dots microphone --toggle &
 
-[module/pulseaudio-bar]
-inherit = module/pulseaudio
+[module/pipewire-bar]
+inherit = module/pipewire
 format-volume = %{T4}%{T-} <label-volume> <bar-volume>
 bar-volume-width = 5
 bar-volume-foreground-0 = #55aa55
@@ -22,10 +22,10 @@ bar-volume-fill-font = 4
 bar-volume-empty = ─
 bar-volume-empty-font = 4
 
-[module/pulseaudio]
+[module/pipewire]
 type = internal/pulseaudio
 
-click-right = pavucontrol
+click-right = pwvucontrol
 
 format-volume = %{T4}%{T-} <label-volume>
 format-volume-foreground = ${colors.foreground}
@@ -34,29 +34,3 @@ label-volume-foreground = ${colors.foreground}
 
 label-muted =  muted
 label-muted-foreground = ${colors.foreground-alt}
-
-[module/alsa]
-type = internal/alsa
-
-format-volume = <label-volume> <bar-volume>
-label-volume = %{T4}%{T-}
-label-volume-foreground = ${root.foreground}
-
-format-muted-prefix = 
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
-
-bar-volume-width = 5
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
