--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -44,7 +44,7 @@ menu-2-2 = ""
 menu-2-2-exec = dots i3-resurrect-rofi &
 menu-2-2-font = 2
 menu-2-3 = ""
-menu-2-3-exec = pavucontrol &
+menu-2-3-exec = pwvucontrol &
 menu-2-3-font = 2
 # 3
 menu-3-0 = "󰘕"
