fix: suppress error messages in microphone script and configuration

--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -1,9 +1,9 @@
 [module/pipewire-microphone]
 type = custom/script
-exec = dots microphone
+exec = dots microphone 2>/dev/null
 tail = true
 label-font = 4
-click-left = dots microphone --toggle &
+click-left = dots microphone --toggle 2>/dev/null &
 
 [module/pipewire-bar]
 inherit = module/pipewire
