Add various utility scripts and enhance existing ones
- Introduced `executable_dots-dependencies` for managing dependencies.
- Enhanced `executable_dots-feh-blur`, `executable_dots-git-notify`, `executable_dots-i3-resurrect-rofi`, `executable_dots-jgmenu`, `executable_dots-microphone`, `executable_dots-monitor`, `executable_dots-next-workspace`, `executable_dots-night-mode` with copyright and documentation headers.
- Updated permissions for several scripts to be executable.
- Added `executable_dots-performance` for performance monitoring and benchmarking.
- Created `executable_dots-security-audit` for security auditing and fixing.
- Enhanced `executable_dots-sysupdate`, `executable_dots-toggle`, `executable_dots-updates`, `executable_dots-wal-reload` with copyright and documentation headers.
- Updated `executable_dots-weather-info` copyright year.
- Modified `dots-scripts.sh` to include new scripts in the list.
- Added validation script `validate-dots-scripts.sh` to ensure scripts follow conventions.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - "docs/**"
+      - "docs/wiki/**"
       - ".github/workflows/docs.yml"
     tags:
       - v*
@@ -37,7 +37,7 @@ jobs:
       - name: Sync docs to wiki
         uses: newrelic/wiki-sync-action@v1.0.1
         with:
-          source: docs
+          source: docs/wiki
           destination: wiki
           token: ${{ secrets.DOTFILES_GITHUB_TOKEN }}
 
@@ -53,7 +53,7 @@ jobs:
         uses: newrelic/wiki-sync-action@v1.0.1
         with:
           source: wiki
-          destination: docs
+          destination: docs/wiki
           token: ${{ secrets.DOTFILES_GITHUB_TOKEN }}
           branch: master
 
