--- a/.github/workflows/clone-and-install.yml
+++ b/.github/workflows/clone-and-install.yml
@@ -1,7 +1,23 @@
 name: Clone and Install
 
 on:
-  workflow_call:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+  schedule:
+    - cron: "31 1,12 * * *"
+
+  push:
+    branches:
+      - master
+
+  pull_request:
+    branches:
+      - master
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: read
