--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Build Docs
         run: |
           mkdir public
-          node ./github-wikito-converter/dist/cli/gwtc.js --file-name index --output ./public --toc-level 3 ./docs
+          node ./github-wikito-converter/dist/cli/gwtc.js --file-name index --output ./public --toc-level 3 ./docs/wiki
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
