feat: add full emoji support to Polybar with Noto Color Emoji fonts

--- a/home/dot_config/polybar/bars/i3-top-multipart.conf
+++ b/home/dot_config/polybar/bars/i3-top-multipart.conf
@@ -65,6 +65,10 @@ font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
 font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
+font-6 = "Noto Color Emoji:style=Regular:size=10;2"
+font-7 = "Noto Color Emoji:style=Regular:pixelsize=15;3"
+font-8 = "Noto Color Emoji:style=Regular:pixelsize=20;4"
+font-9 = "Noto Color Emoji:style=Regular:pixelsize=25;5"
 
 ; Requires polybar to be built with xcursor support (xcb-util-cursor)
 ; Possible values are:
@@ -163,6 +167,10 @@ font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
 font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
+font-6 = "Noto Color Emoji:style=Regular:size=10;2"
+font-7 = "Noto Color Emoji:style=Regular:pixelsize=15;3"
+font-8 = "Noto Color Emoji:style=Regular:pixelsize=20;4"
+font-9 = "Noto Color Emoji:style=Regular:pixelsize=25;5"
 
 ; Requires polybar to be built with xcursor support (xcb-util-cursor)
 ; Possible values are:
@@ -261,6 +269,10 @@ font-2 = "Hack Nerd Font Mono:style=Regular:pixelsize=12;2"
 font-3 = "Hack Nerd Font Mono:style=Solid:pixelsize=17;4"
 font-4 = "Hack Nerd Font Mono:style=Solid:pixelsize=25;5"
 font-5 = "Hack Nerd Font Mono:style=Regular:pixelsize=9;2"
+font-6 = "Noto Color Emoji:style=Regular:size=10;2"
+font-7 = "Noto Color Emoji:style=Regular:pixelsize=15;3"
+font-8 = "Noto Color Emoji:style=Regular:pixelsize=20;4"
+font-9 = "Noto Color Emoji:style=Regular:pixelsize=25;5"
 
 ; Requires polybar to be built with xcursor support (xcb-util-cursor)
 ; Possible values are:
