feat: add support for EWW top bar and sidebar in picom configuration

--- a/home/dot_config/picom/picom-rules.conf
+++ b/home/dot_config/picom/picom-rules.conf
@@ -97,6 +97,8 @@ rules: (
     {
         match = "class_g = 'Polybar'	|| "
                 "class_g = 'eww-bar'	|| "
+                "class_g = 'eww-topbar'	|| "
+                "class_g = 'eww-sidebar'	|| "
                 "class_g = 'Viewnior'	|| "
                 "class_g = 'Rofi'		|| "
                 "class_g = 'mpv'		|| "
@@ -272,5 +274,33 @@ rules: (
                 duration = 0.2;
             }
         )
+    },
+
+    # EWW Top Bar - no animations for smooth bar experience
+    {
+        match = "class_g = 'eww-topbar' || name *= 'eww-topbar'";
+        animations = ();
+        opacity = 1.0;
+        shadow = false;
+    },
+
+    # EWW Sidebar - slide animations for elegant appearance
+    {
+        match = "class_g = 'eww-sidebar' || name *= 'eww-sidebar'";
+        animations = (
+            {
+                triggers = ["open", "show"];
+                preset = "slide-in";
+                direction = "left";
+                duration = 0.3;
+            },
+            {
+                triggers = ["close", "hide"];
+                preset = "slide-out";
+                direction = "left";
+                duration = 0.25;
+            }
+        );
+        opacity = 0.95;
     }
 )
