--- a/home/dot_config/picom/picom.conf
+++ b/home/dot_config/picom/picom.conf
@@ -15,9 +15,14 @@ corner-radius = 4;
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
     "class_g *= 'Polybar'",
+    "class_g *= 'eww-topbar'",
+    "class_g *= 'eww-sidebar'",
     "window_type = 'dock'",
     "class_g = 'bar'",
     "name *= 'polybar'",
+    "name *= 'eww-bar'",
+    "name *= 'eww-topbar'",
+    "name *= 'eww-sidebar'",
 ]
 
 #################################
@@ -71,6 +76,9 @@ shadow-exclude = [
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "name *= 'Fcitx'",
     "name *= 'polybar'",
+    "name *= 'eww-bar'",
+    "name *= 'eww-topbar'",
+    "name *= 'eww-sidebar'",
     "name *= 'rofi'",
     "name *= 'jgmenu'",
     "class_g *= 'tim.exe'",
@@ -132,6 +140,8 @@ blur-background-exclude = [
     "window_type = 'desktop'",
     "name *= 'rofi'",
     "name *= 'jgmenu'",
+    "name *= 'eww-topbar'",
+    "name *= 'eww-sidebar'",
     "class_g *= 'Dunst'",
 ];
 
